--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO='mongodb+srv://navyabijoy14:navyabijoy@mern-estate.7vlxa.mongodb.net/mern-estate?retryWrites=true&w=majority&appName=mern-estate'
+MONGO=mongodb+srv://navyabijoy14:navyabijoy14@mern-real-estate.6otu7.mongodb.net/?retryWrites=true&w=majority&appName=mern-real-estate
