--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
