--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "@supabase/supabase-js": "^2.47.11",
     "firebase": "^11.1.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
