--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.47.11",
     "firebase": "^11.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.471.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "^22.10.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
